# colophon

./: .gitattributes  .gitignore  .justfile  .repo.yml  AGENTS.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  deny.toml
.claude/: CLAUDE.md  settings.json  settings.request.json
.claude/plans/: 001-architecture.md
.github/: coda.yml  formula.rb.tmpl
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-cargo-tools/: action.yml
.github/actions/setup-site-deps/: action.yml
.github/docs/: README.md  releases.md
.github/workflows/: cd.yml  deploy-site.yml
.handoffs/: 2026-03-09-233000-phase1-extract.md  2026-03-10-124500-phase2-curate.md  2026-03-10-214500-phase2-curate-unblocked.md  2026-03-19-2151-phase3-render-and-incremental.md  2026-03-20-0038-render-smoke-test-and-incremental-design.md  2026-03-20-1226-glossary-polish-and-incremental-ready.md  2026-03-20-1858-incremental-curate-and-readme.md  2026-03-21-1139-validate-phantom-locations.md  2026-03-26-0045-release-ready.md  2026-03-26-1051-pre-release-polish.md
assets/: colophon-ascii.txt
config/: colophon.toml.example  colophon.yaml.example  curate-delta-schema.json  curate-delta-schema.yaml  curate-schema.json  curate-schema.yaml
crates/colophon/: Cargo.toml
crates/colophon-core/: Cargo.toml
crates/colophon-core/src/: config.rs  error.rs  lib.rs  observability.rs  typst_prose.rs  validate.rs
crates/colophon-core/src/curate/: claude.rs  cost.rs  incremental.rs  mod.rs  terms.rs
crates/colophon-core/src/extract/: candidates.rs  keywords.rs  markdown.rs  mod.rs  typst.rs
crates/colophon-core/src/render/: mod.rs  typst.rs
crates/colophon/src/: lib.rs  main.rs
crates/colophon/src/commands/: curate.rs  doctor.rs  extract.rs  info.rs  mod.rs  render.rs
crates/colophon/tests/: cli.rs  config_integration.rs
docs/plans/: 2026-03-09-phase1-extract.md  2026-03-10-phase2-curate.md
npm/colophon/: index.js  install.js  package.json
record/audits/2026-03-21-current-repo-review/: actions-taken.md  findings.yaml  index.md  recon.yaml
record/decisions/: 0001-index-hierarchy-depth-and-render-mapping.md  README.md
record/superpowers/plans/: 2026-03-20-incremental-curate.md  2026-03-20-render-phase.md  2026-03-21-validate-phantom-locations.md
record/superpowers/specs/: 2026-03-20-incremental-curate-design.md  2026-03-20-render-phase-design.md
scripts/: curate-request  rename.sh
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/src/content/docs/: index.mdx
site/src/content/docs/guides/: installation.md
site/src/content/docs/reference/: cli.md
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: completions.rs  install.rs  man.rs
