[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
homepage.workspace = true

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
clap_mangen = "0.3"
colophon = { path = "../crates/colophon" }
