[package]
name = "colophon-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core library for colophon"
repository.workspace = true
homepage.workspace = true
readme.workspace = true
exclude = [
    # Workspace-level files (/ = workspace root)
    "/.claude/",
    "/.github/",
    "/AGENTS.md",
    "/.justfile",
    "/.editorconfig",
    "/.markdownlint.yaml",
    "/.yamllint",
    "/.envrc",
    "/.env",
    "/.env.rust",

    "/docs/",
    "/deny.toml",
    # Example config files
    "/*.example",
]

[dependencies]
camino = { version = "1.2", features = ["serde1"] }
directories = "6.0"
figment = { version = "0.10", features = ["toml", "yaml", "json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"

# Markdown parsing
pulldown-cmark = "0.13"

# Keyword extraction (YAKE — TF-IDF is hand-rolled)
yake-rust = { version = "1.0", default-features = false, features = ["en"] }
stop-words = { version = "0.10", features = ["iso", "nltk"] }

# Regex for exclude_terms pattern matching
regex = "1"

# YAML serialization for candidates output
serde_yaml = "0.9"

# Directory traversal
walkdir = "2"

[dev-dependencies]
tempfile = "3.26"

[lints]
workspace = true


